# CmakeInitPlayground

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.zig
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: main.cpp
test/: CMakeLists.txt
